# mcp-crawl4ai

./: .gitignore  AGENTS.md  AUDIT-ci-build.md  AUDIT-security.md  AUDIT-server-core.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  test_ipv6_url.py  test_url_edge_cases.py
.cursor/rules/: 100-python-formatting.mdc  200-python-linting.mdc  300-python-testing.mdc  400-python-organization.mdc  500-python-security.mdc  600-python-performance.mdc  700-python-documentation.mdc
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crawler_config.yml  documentation.yml  feature_request.yml  general_issue.yml  mcp_compatibility.yml  performance.yml  security_issue.yml  workflow.yml
.github/workflows/: ci.yml  release.yml
.jules/: sentinel.md
assets/context/: crawl_modelcontextprotocol_io_473e0b_collection_20250407.md  modelcontextprotocol_src.md  ncp-homepage-llms-full.txt  unclecode_crawl4ai.md
components/ui/: CodeBlock.tsx
crawl4ai_mcp/: __init__.py  server.py
docs/: mdx-components.tsx  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.mjs
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: index.ts
docs/components/docs/: ApiExample.tsx  ComparisonTable.tsx  FeatureCard.tsx  Hero.tsx  Timeline.tsx
docs/components/home/: CTASection.tsx  FeaturesGrid.tsx  Footer.tsx  IntegrationExamples.tsx  WhySection.tsx
docs/components/ui/: CodeBlock.tsx  Diagram.tsx  button.tsx
docs/content/docs/: api-reference.mdx  architecture.mdx  contributing.mdx  features.mdx  index.mdx  meta.json  prd.mdx  roadmap.mdx
docs/public/: site.webmanifest
mcp_crawl4ai/: server.py
tests/: conftest.py  test_contract_lock.py  test_coverage_helpers.py  test_server.py
tests/manual/: README.md  test_live.py
